# world-clock

./: .gitignore  CMakeLists.txt  README.md  world_clock.json
src/: main.cpp
src/app/: app.cpp  app.hpp  input.hpp  shared.hpp
src/clock/: world_clock.hpp  world_hour.hpp
src/gui/: gui.cpp  gui.hpp
src/io/: io.cpp  io.hpp  str_to_f.hpp  str_to_f_fc.cpp  str_to_f_stf.cpp
